@@ -23,7 +23,7 @@ const TEST_DATA_ENC: &[u8] = include_bytes!("../tests/data/data.txt.enc");
 #[bench]
 fn decrypt(b: &mut Bencher) {
     b.iter(|| {
-        Decryptor::new(TEST_DATA_ENC, PASSPHRASE)
+        Decryptor::new(&TEST_DATA_ENC, PASSPHRASE)
             .and_then(Decryptor::decrypt_to_vec)
             .unwrap()
     });
