@@ -22,7 +22,7 @@ const TEST_DATA: &[u8] = include_bytes!("../tests/data/data.txt");
 #[bench]
 fn encrypt(b: &mut Bencher) {
     b.iter(|| {
-        Encryptor::with_params(TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
+        Encryptor::with_params(&TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
             .map(Encryptor::encrypt_to_vec)
             .unwrap()
     });
