@@ -55,7 +55,7 @@ fn main() -> anyhow::Result<()> {
         .context("could not read passphrase")?;
     let params =
         abcrypt::argon2::Params::new(opt.memory_size, opt.iterations, opt.parallelism, None)?;
-    let cipher = abcrypt::Encryptor::with_params(plaintext, passphrase, params)?;
+    let cipher = abcrypt::Encryptor::with_params(&plaintext, passphrase, params)?;
     let ciphertext = cipher.encrypt_to_vec();
     std::fs::write(opt.output, ciphertext)
         .with_context(|| format!("could not write the result to {}", opt.input.display()))?;
