@@ -19,14 +19,14 @@ const TEST_DATA_ENC: &[u8] = include_bytes!("data/data.txt.enc");
 #[test]
 fn success() {
     {
-        let cipher = Decryptor::new(TEST_DATA_ENC, PASSPHRASE).unwrap();
+        let cipher = Decryptor::new(&TEST_DATA_ENC, PASSPHRASE).unwrap();
         let mut buf = vec![u8::default(); cipher.out_len()];
         cipher.decrypt(&mut buf).unwrap();
         assert_eq!(buf, TEST_DATA);
     }
 
     {
-        let plaintext = Decryptor::new(TEST_DATA_ENC, PASSPHRASE)
+        let plaintext = Decryptor::new(&TEST_DATA_ENC, PASSPHRASE)
             .and_then(Decryptor::decrypt_to_vec)
             .unwrap();
         assert_eq!(plaintext, TEST_DATA);
@@ -36,14 +36,14 @@ fn success() {
 #[test]
 #[should_panic(expected = "source slice length (14) does not match destination slice length (15)")]
 fn invalid_output_length() {
-    let cipher = Decryptor::new(TEST_DATA_ENC, PASSPHRASE).unwrap();
+    let cipher = Decryptor::new(&TEST_DATA_ENC, PASSPHRASE).unwrap();
     let mut buf = vec![u8::default(); cipher.out_len() + 1];
     cipher.decrypt(&mut buf).unwrap();
 }
 
 #[test]
 fn incorrect_passphrase() {
-    let plaintext = Decryptor::new(TEST_DATA_ENC, "password")
+    let plaintext = Decryptor::new(&TEST_DATA_ENC, "password")
         .and_then(Decryptor::decrypt_to_vec)
         .unwrap_err();
     assert_eq!(plaintext, Error::InvalidHeaderMac(MacError));
@@ -53,7 +53,7 @@ fn incorrect_passphrase() {
 fn invalid_input_length() {
     {
         let data = [u8::default(); 155];
-        let plaintext = Decryptor::new(data, PASSPHRASE)
+        let plaintext = Decryptor::new(&data, PASSPHRASE)
             .and_then(Decryptor::decrypt_to_vec)
             .unwrap_err();
         assert_eq!(plaintext, Error::InvalidLength);
@@ -61,7 +61,7 @@ fn invalid_input_length() {
 
     {
         let data = [u8::default(); 156];
-        let plaintext = Decryptor::new(data, PASSPHRASE)
+        let plaintext = Decryptor::new(&data, PASSPHRASE)
             .and_then(Decryptor::decrypt_to_vec)
             .unwrap_err();
         assert_eq!(plaintext, Error::InvalidMagicNumber);
@@ -72,7 +72,7 @@ fn invalid_input_length() {
 fn invalid_magic_number() {
     let mut data: [u8; 170] = TEST_DATA_ENC.try_into().unwrap();
     data[0] = u32::from('b').try_into().unwrap();
-    let plaintext = Decryptor::new(data, PASSPHRASE)
+    let plaintext = Decryptor::new(&data, PASSPHRASE)
         .and_then(Decryptor::decrypt_to_vec)
         .unwrap_err();
     assert_eq!(plaintext, Error::InvalidMagicNumber);
@@ -82,7 +82,7 @@ fn invalid_magic_number() {
 fn unknown_version() {
     let mut data: [u8; 170] = TEST_DATA_ENC.try_into().unwrap();
     data[7] = 1;
-    let plaintext = Decryptor::new(data, PASSPHRASE)
+    let plaintext = Decryptor::new(&data, PASSPHRASE)
         .and_then(Decryptor::decrypt_to_vec)
         .unwrap_err();
     assert_eq!(plaintext, Error::UnknownVersion(1));
@@ -94,7 +94,7 @@ fn invalid_params() {
 
     {
         data[8..12].copy_from_slice(&u32::to_le_bytes(7));
-        let plaintext = Decryptor::new(data, PASSPHRASE)
+        let plaintext = Decryptor::new(&data, PASSPHRASE)
             .and_then(Decryptor::decrypt_to_vec)
             .unwrap_err();
         assert_eq!(
@@ -105,7 +105,7 @@ fn invalid_params() {
 
     {
         data[12..16].copy_from_slice(&u32::to_le_bytes(0));
-        let plaintext = Decryptor::new(data, PASSPHRASE)
+        let plaintext = Decryptor::new(&data, PASSPHRASE)
             .and_then(Decryptor::decrypt_to_vec)
             .unwrap_err();
         assert_eq!(
@@ -116,7 +116,7 @@ fn invalid_params() {
 
     {
         data[16..20].copy_from_slice(&u32::pow(2, 24).to_le_bytes());
-        let plaintext = Decryptor::new(data, PASSPHRASE)
+        let plaintext = Decryptor::new(&data, PASSPHRASE)
             .and_then(Decryptor::decrypt_to_vec)
             .unwrap_err();
         assert_eq!(
@@ -132,7 +132,7 @@ fn invalid_header_mac() {
     let mut header_mac: [u8; 64] = data[76..140].try_into().unwrap();
     header_mac.reverse();
     data[76..140].copy_from_slice(&header_mac);
-    let plaintext = Decryptor::new(data, PASSPHRASE)
+    let plaintext = Decryptor::new(&data, PASSPHRASE)
         .and_then(Decryptor::decrypt_to_vec)
         .unwrap_err();
     assert_eq!(plaintext, Error::InvalidHeaderMac(MacError));
@@ -146,7 +146,7 @@ fn invalid_mac() {
     let mut mac: [u8; 16] = data[start_mac..].try_into().unwrap();
     mac.reverse();
     data[start_mac..].copy_from_slice(&mac);
-    let plaintext = Decryptor::new(data, PASSPHRASE)
+    let plaintext = Decryptor::new(&data, PASSPHRASE)
         .and_then(Decryptor::decrypt_to_vec)
         .unwrap_err();
     assert_eq!(plaintext, Error::InvalidMac(chacha20poly1305::Error));
@@ -154,6 +154,6 @@ fn invalid_mac() {
 
 #[test]
 fn out_len() {
-    let cipher = Decryptor::new(TEST_DATA_ENC, PASSPHRASE).unwrap();
+    let cipher = Decryptor::new(&TEST_DATA_ENC, PASSPHRASE).unwrap();
     assert_eq!(cipher.out_len(), 14);
 }
