@@ -18,14 +18,14 @@ const TEST_DATA: &[u8] = include_bytes!("data/data.txt");
 fn success() {
     {
         let cipher =
-            Encryptor::with_params(TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
+            Encryptor::with_params(&TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
                 .unwrap();
         let mut buf = vec![u8::default(); cipher.out_len()];
         cipher.encrypt(&mut buf);
         assert_ne!(buf, TEST_DATA);
         assert_eq!(buf.len(), TEST_DATA.len() + 156);
 
-        let plaintext = Decryptor::new(buf, PASSPHRASE)
+        let plaintext = Decryptor::new(&buf, PASSPHRASE)
             .and_then(Decryptor::decrypt_to_vec)
             .unwrap();
         assert_eq!(plaintext, TEST_DATA);
@@ -33,13 +33,13 @@ fn success() {
 
     {
         let ciphertext =
-            Encryptor::with_params(TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
+            Encryptor::with_params(&TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
                 .map(Encryptor::encrypt_to_vec)
                 .unwrap();
         assert_ne!(ciphertext, TEST_DATA);
         assert_eq!(ciphertext.len(), TEST_DATA.len() + 156);
 
-        let plaintext = Decryptor::new(ciphertext, PASSPHRASE)
+        let plaintext = Decryptor::new(&ciphertext, PASSPHRASE)
             .and_then(Decryptor::decrypt_to_vec)
             .unwrap();
         assert_eq!(plaintext, TEST_DATA);
@@ -50,7 +50,7 @@ fn success() {
 #[should_panic(expected = "source slice length (30) does not match destination slice length (29)")]
 fn invalid_output_length() {
     let cipher =
-        Encryptor::with_params(TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
+        Encryptor::with_params(&TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
             .unwrap();
     let mut buf = vec![u8::default(); cipher.out_len() - 1];
     cipher.encrypt(&mut buf);
@@ -59,7 +59,7 @@ fn invalid_output_length() {
 #[test]
 fn minimum_output_length() {
     let cipher =
-        Encryptor::with_params([], PASSPHRASE, Params::new(32, 3, 4, None).unwrap()).unwrap();
+        Encryptor::with_params(&[], PASSPHRASE, Params::new(32, 3, 4, None).unwrap()).unwrap();
     assert_eq!(cipher.out_len(), 156);
     let ciphertext = cipher.encrypt_to_vec();
     assert_eq!(ciphertext.len(), 156);
@@ -68,7 +68,7 @@ fn minimum_output_length() {
 #[test]
 fn magic_number() {
     let ciphertext =
-        Encryptor::with_params(TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
+        Encryptor::with_params(&TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
             .map(Encryptor::encrypt_to_vec)
             .unwrap();
     assert_eq!(&ciphertext[..7], b"abcrypt");
@@ -77,7 +77,7 @@ fn magic_number() {
 #[test]
 fn version() {
     let ciphertext =
-        Encryptor::with_params(TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
+        Encryptor::with_params(&TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
             .map(Encryptor::encrypt_to_vec)
             .unwrap();
     assert_eq!(ciphertext[7], 0);
@@ -86,7 +86,7 @@ fn version() {
 #[test]
 fn m_cost() {
     let ciphertext =
-        Encryptor::with_params(TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
+        Encryptor::with_params(&TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
             .map(Encryptor::encrypt_to_vec)
             .unwrap();
     assert_eq!(&ciphertext[8..12], u32::to_le_bytes(32));
@@ -95,7 +95,7 @@ fn m_cost() {
 #[test]
 fn t_cost() {
     let ciphertext =
-        Encryptor::with_params(TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
+        Encryptor::with_params(&TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
             .map(Encryptor::encrypt_to_vec)
             .unwrap();
     assert_eq!(&ciphertext[12..16], u32::to_le_bytes(3));
@@ -104,7 +104,7 @@ fn t_cost() {
 #[test]
 fn p_cost() {
     let ciphertext =
-        Encryptor::with_params(TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
+        Encryptor::with_params(&TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
             .map(Encryptor::encrypt_to_vec)
             .unwrap();
     assert_eq!(&ciphertext[16..20], u32::to_le_bytes(4));
@@ -113,7 +113,7 @@ fn p_cost() {
 #[test]
 fn out_len() {
     let cipher =
-        Encryptor::with_params(TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
+        Encryptor::with_params(&TEST_DATA, PASSPHRASE, Params::new(32, 3, 4, None).unwrap())
             .unwrap();
     assert_eq!(cipher.out_len(), 170);
 }
